# veilbreakers-terrain

./: .codexignore  .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: codeql.yml  pylint.yml  python-package-conda.yml  python-package.yml  ruff.yml
docs/: AAA_ENVIRONMENT_PIPELINE_MEMO_2026_04_19.md  TERRAIN_GENERATION_GUARDRAILS.md  TERRAIN_UPGRADE_MASTER_AUDIT.md
docs/aaa-audit/: CHART.md  CONTEXT7_ROUND2_RESULTS.md  GRADES.csv  GRADES_VERIFIED.csv  M2_MCP_RESEARCH_RESULTS.md  grades_codex.json  grades_opus.json  grades_opus_terrain_advanced.json  grades_opus_terrain_features.json  grades_opus_terrain_sculpt.json  verify_batch1.json  verify_batch2.json  verify_batch3.json  verify_r3_a.json  verify_r3_b.json  verify_r4_a.json  verify_r4_b.json
scripts/: callable_census_gate.py  codex-review.sh  coverage_gap_analysis.py  mark_scope_exempt.py
veilbreakers_terrain/: __init__.py  socket_server.py
veilbreakers_terrain/contracts/: terrain.yaml
veilbreakers_terrain/docs/: TERRAIN_NEXT_RUN_NOTES_2026_04_13.md
veilbreakers_terrain/handlers/: __init__.py  _biome_grammar.py  _bridge_mesh.py  _mesh_bridge.py  _scatter_engine.py  _terrain_depth.py  _terrain_erosion.py  _terrain_noise.py  _terrain_world.py  _water_network.py  _water_network_ext.py  animation_environment.py  animation_gaits.py  atmospheric_volumes.py  autonomous_loop.py  coastline.py  environment.py  environment_scatter.py  light_integration.py  lod_pipeline.py  mesh.py  mesh_smoothing.py  procedural_materials.py  procedural_meshes.py  road_network.py  terrain_addon_health.py  (+100 more)
(+130 files in other folders)
